added tab avigation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <a class="item" routerLink="/dashboard"><i class="home icon"></i>Dashboard </a>
     <a class="item" routerLink="/donate-blood"><i class="theme icon"></i>Donate Blood</a>
     <a class="item" routerLink="/blood-bank"><i class="add circle icon"></i>Blood Banks</a>
+    <a class="item" routerLink="/blood-bank"><i class="add circle icon"></i>Blood Banks</a>
 
     <a class="item right">
         <i class="doctor icon big"></i>|&nbsp;
