--- a/src/app/donate-blood/donate-blood.component.html
+++ b/src/app/donate-blood/donate-blood.component.html
@@ -1,30 +1,30 @@
 <div class="ui donorForm">
   <h2>Please Fill in the From</h2>
   <div>
-    <div class="ui sticky">
-      <div class="ui four attached steps horizontal">
-        <a class="active step">
+    <div name="static_headers" class="ui sticky">
+      <div class="ui four attached menu steps horizontal">
+        <a class="active step personalInfoStep" data-tab="personalInfo">
                 <i class="address card icon red"></i>
                 <div class="content">
                     <div class="title">Personal Information</div>
                     <!--<div class="description">Choose your shipping options</div>-->
                 </div>
             </a>
-        <a class="step">
+        <a class="step healthInfoStep" data-tab="healthInfo">
                 <i class="heartbeat icon red"></i>
                 <div class="content">
                     <div class="title">Health Information</div>
                     <!--<div class="description">Enter billing information</div>-->
                 </div>
             </a>
-        <a class="step">
+        <a class="step riskInfoStep" data-tab="riskInfo">
                 <i class="warning sign icon red"></i>
                 <div class="content">
                     <div class="title">Risk Behaviour</div>
                     <!--<div class="description">Verify order details</div>-->
                 </div>
             </a>
-        <a class="step">
+        <a class="step declarationInfoStep" data-tab="declarationInfo">
                 <i class="edit icon red"></i>
                 <div class="content">
                     <div class="title">Declaration</div>
@@ -35,9 +35,9 @@
 
     </div>
     <br/>
-    <div id="personalInformation" class="lightslategrey formSegment">
+    <div class="lightslategrey formSegment">
       <form class="ui form" [formGroup]="donorForm" novalidate (ngSubmit)="submitForm(donorForm)">
-        <div formGroupName="personalInfo" class="ui segment">
+        <div formGroupName="personalInfo" data-tab="personalInfo" id="personalInformation" class="ui tab segment personalInformation">
 
           <div class="field">
             <div class="fields">
@@ -469,9 +469,32 @@
           </div>
 
           <h5 class="ui dividing red header"></h5>
-          <div class="ui button green" tabindex="0" (click)="(submitForm(donorForm))">Submit Order</div>
-          <div class="ui button blue" tabindex="0" (click)="(notify())">Submit</div>
+          <div class="ui button blue" tabindex="0" (click)="(changePage('.health_info','.personalInformation'))">Next</div>
 
+        </div>
+        <div class="health_info tab ui segment" data-tab="healthInfo">
+          <h1>Health form</h1>
+          <div class="field">
+            <div class="fields" formGroupName="emergencyContact">
+              <div class="four ui wide field">
+                <label class="default text">Name of Emergency Contact</label>
+                <input type="text" formControlName="firstName" name="firstName">
+              </div>
+              <div class="four ui wide field">
+                <label class="default text">Last Name of Emergency Contact</label>
+                <input type="text" formControlName="lastName" name="lastName">
+              </div>
+              <div class="four ui wide field" formGroupName="contactNumber">
+                <label class="default text">Contact Number of Emergency Contact</label>
+                <div class="ui labeled input">
+                  <div class="ui label">
+                    +264
+                  </div>
+                  <input type="tel" formControlName="number" name="contactNumber">
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </form>
     </div>
