--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="ui segment">
+<div class="ui">
   <div class="ui inverted red top fixed stacked menu">
     <a class="item" routerLink="/dashboard"><i class="home icon"></i>Dashboard </a>
     <a class="item" routerLink="/donate-blood"><i class="theme icon"></i>Donate Blood</a>
@@ -6,18 +6,18 @@
 
     <a class="item right">
         <i class="doctor icon big"></i>|&nbsp;
-        <a class="pointing ui dropdown dd" routerLink="/donate-blood">&#160; Erastus Nathingo
+        <a class="pointing ui dropdown dd">&#160; Erastus Nathingo
           <div class="menu hidden">
             <div class="item">Profile</div>
             <div class="item">Settings</div>
             <div class="ui divider"></div>
-            <div class="item">Logout</div>
+            <div class="item" routerLink="/login">Logout</div>
           </div>
         </a>
 
     </a>
   </div>
-  <div class="ui segment">
+  <div class="ui">
     <br/><br/>
     <router-outlet></router-outlet>
   </div>
