--- a/src/app/donate-blood/donate-blood.component.html
+++ b/src/app/donate-blood/donate-blood.component.html
@@ -1,5 +1,8 @@
-<div class="ui donorForm">
-  <h2>Please Fill in the From</h2>
+<div class="ui donorForm segment">
+  <br/>
+  <div class="center aligned grid middle">
+    <h2>Please Fill in the From</h2>
+  </div>
   <div>
     <div class="ui sticky">
       <div class="ui four attached steps horizontal">
