--- a/src/app/blood-bank/blood-bank.component.html
+++ b/src/app/blood-bank/blood-bank.component.html
@@ -1,1 +1,7 @@
-<div class="blood-bank"> Hello BloodBankComponent! </div>
+<div class="blood-bank">
+
+  <div class="ui segment">
+    <br/>
+    <h1 class="center">Blood Banks</h1>
+  </div>
+</div>
