--- a/src/app/user-manager/user-manager.component.html
+++ b/src/app/user-manager/user-manager.component.html
@@ -2,5 +2,95 @@
   <div class="ui segment">
     <br/>
     <h1>User Management</h1>
+    <div>
+      <table class="ui compact celled definition table">
+        <thead class="full-width ui inverted table">
+          <tr class="ui">
+            <th>Role</th>
+            <th>Full Name</th>
+            <th>Username</th>
+            <th>Registration Date</th>
+            <th>E-mail address</th>
+            <th>Premium Plan</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="collapsing">
+              <i class="doctor blue icon"></i>
+            </td>
+            <td>Erastus Nathingo</td>
+            <td>Erassy</td>
+            <td>September 14, 2016</td>
+            <td>contact@erassy.com</td>
+            <td>No</td>
+            <td>
+              <button class="ui icon button">
+                <i class="eye icon green"></i>
+              </button>
+              <button class="ui icon button">
+                <i class="edit icon blue"></i>
+              </button>
+              <button class="ui icon button">
+                <i class="trash icon red"></i>
+              </button>
+            </td>
+          </tr>
+          <tr>
+            <td class="collapsing">
+              <i class="theme red icon"></i>
+            </td>
+            <td>Jamie Harington</td>
+            <td>Jamie123</td>
+            <td>January 11, 2015</td>
+            <td>jamieharingonton@yahoo.com</td>
+            <td>Yes</td>
+            <td>
+              <button class="ui icon button">
+                <i class="eye icon green"></i>
+              </button>
+              <button class="ui icon button">
+                <i class="edit icon blue"></i>
+              </button>
+              <button class="ui icon button">
+                <i class="trash icon red"></i>
+              </button>
+            </td>
+          </tr>
+          <tr>
+            <td class="collapsing">
+              <i class="user green icon"></i>
+            </td>
+            <td>Jill Lewis</td>
+            <td>jLewis@me</td>
+            <td>May 11, 2017</td>
+            <td>jilsewris22@yahoo.com</td>
+            <td>Yes</td>
+            <td>
+              <button class="ui icon button">
+                <i class="eye icon green"></i>
+              </button>
+              <button class="ui icon button">
+                <i class="edit icon blue"></i>
+              </button>
+              <button class="ui icon button">
+                <i class="trash icon red"></i>
+              </button>
+            </td>
+          </tr>
+        </tbody>
+        <tfoot class="full-width">
+          <tr>
+            <th></th>
+            <th colspan="6">
+              <div class="ui right floated small primary labeled icon button">
+                <i class="user icon"></i> Add User
+              </div>
+            </th>
+          </tr>
+        </tfoot>
+      </table>
+    </div>
   </div>
 </div>
