Complete 3rd form UI

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <div class="ui app-root">
-  <div class="ui inverted red top fixed stacked menu">
-    <a class="item" routerLink="/dashboard"><i class="home icon"></i>Dashboard </a>
-    <a class="item" routerLink="/donate-blood"><i class="theme icon"></i>Donate Blood</a>
-    <a class="item" routerLink="/blood-bank"><i class="add circle icon"></i>Blood Banks</a>
-    <a class="item" routerLink="/camps"><i class="user icon"></i>Camps</a>
-    <a class="item" routerLink="/user-manager"><i class="user icon"></i>User Management</a>
-    <a class="item" routerLink="/"><i class="info circle icon"></i>About</a>
+  <div class="ui inverted red fixed menu">
+    <a class="blue item" routerLink="/dashboard"><i class="home icon"></i>Dashboard </a>
+    <a class="blue item" routerLink="/donate-blood"><i class="theme icon"></i>Donate Blood</a>
+    <a class="blue item" routerLink="/blood-bank"><i class="add circle icon"></i>Blood Banks</a>
+    <a class="blue item" routerLink="/camps"><i class="user icon"></i>Camps</a>
+    <a class="blue item" routerLink="/user-manager"><i class="user icon"></i>User Management</a>
+    <a class="blue item" routerLink="/"><i class="info circle icon"></i>About</a>
 
     <a class="item right">
         <i class="doctor icon big"></i>|&nbsp;
