--- a/src/app/user-manager/user-manager.component.html
+++ b/src/app/user-manager/user-manager.component.html
@@ -11,7 +11,7 @@
             <th>Username</th>
             <th>Registration Date</th>
             <th>E-mail address</th>
-            <th>Premium Plan</th>
+            <th>Permissions</th>
             <th>Action</th>
           </tr>
         </thead>
@@ -23,8 +23,8 @@
             <td>Erastus Nathingo</td>
             <td>Erassy</td>
             <td>September 14, 2016</td>
-            <td>contact@erassy.com</td>
-            <td>No</td>
+            <td><a href="mailto:contact@erassy.com">contact@erassy.com</a></td>
+            <td>Universal</td>
             <td>
               <button class="ui icon button">
                 <i class="eye icon green"></i>
@@ -44,8 +44,8 @@
             <td>Jamie Harington</td>
             <td>Jamie123</td>
             <td>January 11, 2015</td>
-            <td>jamieharingonton@yahoo.com</td>
-            <td>Yes</td>
+            <td> <a href="mailto:jamieharingonton@yahoo.com">jamieharingonton@yahoo.com</a></td>
+            <td>Read, Write, Update, Delete</td>
             <td>
               <button class="ui icon button">
                 <i class="eye icon green"></i>
@@ -65,8 +65,8 @@
             <td>Jill Lewis</td>
             <td>jLewis@me</td>
             <td>May 11, 2017</td>
-            <td>jilsewris22@yahoo.com</td>
-            <td>Yes</td>
+            <td><a href="mailto:jilsewris22@yahoo.com">jilsewris22@yahoo.com</a></td>
+            <td>Read, Write, Update, Delete</td>
             <td>
               <button class="ui icon button">
                 <i class="eye icon green"></i>
@@ -85,7 +85,7 @@
             <th></th>
             <th colspan="6">
               <div class="ui right floated small primary labeled icon button">
-                <i class="user icon"></i> Add User
+                <i class="add user icon"></i> Add User
               </div>
             </th>
           </tr>
