Chart implemented but not fully functioning.

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,4 +3,8 @@
     <br/>
     <h1 class="center">Dashboard</h1>
   </div>
+  <div class="ui segment">
+    <br/>
+   <div id="chart-container">Available Blood</div>
+  </div>
 </div>
