--- a/src/app/donate-blood/donate-blood.component.html
+++ b/src/app/donate-blood/donate-blood.component.html
@@ -65,7 +65,7 @@
 
               <div class="twelve ui wide field">
                 <label>Maiden Name</label>
-                <input type="text" name="maidenName" formControlName="maidenName" placeholder="First Name">
+                <input type="text" name="maidenName" formControlName="maidenName" placeholder="Maiden Name">
               </div>
 
               <div class="twelve ui wide field required">
